# wavmarker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FileStream.h  Generator.h  LICENSE.md  Parser.h  README.md  build.bat  build.sh  main.cpp  main.py  sample_files.py  set_release.sh  version.h.in  wave.py  wavfile.py  wavfile2.py
.github/workflows/: build-and-release.yml
nodes/: CliApplication.h  Container.h  Reflection.h
nodes/JSON/ast/: JSONValue.cpp  JSONValue.h
nodes/JSON/error/: JSONError.h
nodes/JSON/parser/: JSONParser.h  JSONTokenizer.h  JSONTokens.h
nodes/wavmarker/: ChunkKind.h  Patcher.h  WavFile.cpp  WavFile.h
scripts/: set_release.sh  write_changelog.sh
src/: CliApplication.cpp  CliHandling.h  Container.h  Generator.h  Parser.h
src/JSON/error/: JSONError.h
src/JSON/visitor/: JSONPrintVisitor.h  JSONVisitor.h
src/cli/: CliApplication.cpp  CliApplication.h  CliHandling.h
src/wavmarker/: ChunkKind.h  Patcher.h  WavFile.cpp  WavFile.h
util/: Error.cpp  Error.h  FileStream.h  StreamUtils.h  StringUtils.h
